--- a/CSS/about.css
+++ b/CSS/about.css
@@ -1,663 +1,155 @@
-*{
-    font-weight: 100;
-    padding: 0;
-    margin: 0;
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    box-sizing: border-box;
-    list-style: none;
-    text-decoration: none;
-}
-:root{
-    --main-color:#31549e;
-    --body-bg:#ffffff;
-    --box-bg:#221f1f;
-    --nav-height:60px;
-    --space-top:30px;
-}
-/* NAV BAR START HERE */
-body{
-    font-family: 'League Spartan', sans-serif;
-    background-color: var(--body-bg);
-    color: var(--text-color);
-    padding-top: var(--nav-height);
-}
-
-.nav-wrapper{
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 80px;
-    z-index: 10;
-    padding-top: 6px;
-    background-color:#ffffff;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-}
-
-.nav{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    color: var(--text-color);
-    height: var(--nav-height);
-    margin: 0px 10px 0px 10px;
-}
-
-.nav a{
-    color: var(--text-color);
-}
-.logo{
-    width: 13%;
-    cursor:pointer;
-    margin-left: 30px;
-}
-
-.nav-menu{
-    display: flex;
-    align-items: center;
-    margin-right: 60px;
-}
-ul li a{
-    font-weight: 500;
-    transition: all 0.50s;
-}
-a:hover{
-    color: #dd8441;
-}
-.nav-menu ul li{
-    font-size: 17px;
-    color: rgb(30, 28, 28);
-    text-align: center;
-    display: inline;
-    text-decoration: none;
-    margin-right: 100px;
-  }
-  
-  .dropdown {
-    float: left;
-    overflow: hidden;
-  }
-  
-  .dropdown .dropbtn {
-    font-size: 16px;  
-    border: none;
-    outline: none;
-    color: rgb(20, 20, 20);
-    padding: 14px 16px;
-    font-weight: 600;
-    background-color: inherit;
-    font-family: inherit;
-    transition: all 0.50s;
-  }
-  .dropbtn:hover{
-    color: #dd8441;
-  }
-  .login-btn{
-    padding: 8px 30px 8px 30px;
-    font-weight: 500;background: #dd8441;border: none;
-    color: white;
-    margin-right: 40px;
-    cursor: pointer;
-    transition: all 0.90s;
-  }
-  .login-btn:hover{
-    background:rgb(35, 25, 25);
-  }
-  .nav-menu a:hover, .dropdown:hover .dropbtn {
-    background-color: none;
-  }
-  
-  .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-  }
-  
-  .dropdown-content a {
-    float: none;
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
+.header {
+  max-width: 570px;
+  color: #e73f25;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 100px;
+}.header h1{
+  letter-spacing: -.01em;
+    margin-top: 0;
+    margin-bottom: 30px;
+    font-size: 48px;
+    font-weight: 800;
+    line-height: 121%;
     display: block;
-    text-align: left;
-  }
-  
-  .dropdown-content a:hover {
-    background-color: #ddd;
-  }
-  
-  .dropdown:hover .dropdown-content {
-    display: block;
-  }
-/* .nav-menu li{
-    list-style-type:none ;
-    display:inline;
-    align-items: center;
-    padding: 0 20px;
-    color:white;
+    margin-block-start: 0.67em;
+    margin-block-end: 0.67em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
 }
 
-.nav-menu li ~ li{
-    margin-left: 30px;
-}
-.nav-menu a{
-    font-weight: 500;
-} */
-.btn{
-    color: #ffffff;
-    padding: 0.25rem 1.5rem;
-    font-size: 1.25rem;
-    font-weight: 700;
-    display: inline-flex;
-    position: relative;
-    align-items: center;
-}
-.hamburger-menu{
-    --size:30px;
-    height: var(--size);
-    width: var(--size);
-    cursor: pointer;
-    position: relative;
-    display: none;
-    align-items: center;
-}
-
-.hamburger{
-    position: relative;
-}
-.hamburger,
-.hamburger::before,
-.hamburger::after{
-    width: var(--size);
-    height: 3px;
-    border-radius: .5rem;
-    background-color: rgb(0, 0, 0);
-    transition: .4s;
-}
-
-.hamburger::before,
-.hamburger::after{
-    content: "";
-    position: absolute;
-    left: 0;
-}
-
-.hamburger::before{
-    top: -10px;
-}
-.hamburger::after{
-    bottom: -10px;
-}
-
-.hamburger-menu.active .hamburger{
-    background-color: transparent;
-}
-.hamburger-menu.active .hamburger::before{
-    transform-origin: top left;
-    transform: rotate(45deg);
-    left: 6px;
-}
-
-.hamburger-menu.active .hamburger::after{
-    transform-origin: bottom left;
-    transform: rotate(-45deg);
-    left: 6px;
-}
-
-/* <!-- HEADER CSS START HERE --> */
-/* FOOTER START HERE */
-.container_footer{
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    flex-wrap: wrap;
-    
-  }
-  .footer_form h3{
-    font-size: 24px;
-    color: white;
-    text-decoration: underline;
-    font-weight: 700;
-    margin-bottom: 20px;
-  }
-  .footer_form input{
-    width: 300px;
-    height: 45px;
-    margin-bottom: 12px;
-    padding-left: 15px;
-    font-size: 16px;
-    border: none;
-    border-radius: 2px;
-  }
-  .footer_form button{
-    background-color: #c25421;
-    color: white;
-    border: none;
-    cursor: pointer;
-    font-weight: bold;
-    transition: all .3s ease;
-    width: 300px;
-    height: 43px;
-    font-size: 17px;
-    border-radius: 2px;
-  }
-  .footer_form button:hover{
-    opacity: 0.80;
-  }
-  .footer_containt h2{
-    font-size: 27px;
-    color: rgb(244, 244, 244);
-    font-weight: 700;
-  }
-  .footer_containt ul li{
-    padding-top: 20px;
-  }
-  .footer_containt ul li a{
-    text-decoration: none;
-    color: black;
-    font-size: 17px;
-    transition: all 0.6s;
-  }
-  .footer_containt ul li a:hover{
-    color: rgb(255, 255, 255);
-    text-decoration: underline;
-  }
-  .footer{
-    background-image: linear-gradient(to bottom right, rgb(191, 86, 12) , rgb(225, 181, 131),rgb(191, 86, 12));
-    padding: 50px 0px 50px 0px;
-    margin-top: 100px;
-  }
-  .footer_form h4{
-    margin-top: 15px;
-    font-weight: 600;
-  }
-  .owner{
+.header h6{
+  color: #ef8408;
     text-align: center;
-    color: rgb(34, 32, 32);
-    padding-top: 50px;
-    font-weight: 400;
-  }
-/* FOOTER END HERE */
-
-/* ABOUT  STARTS HERE */
-.services_s {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-  }
-  
-  .service_s-card {
-    width: 350px;
-    margin: 20px;
-    padding: 5px;
-    border: 1px solid #ccc;
-    border-radius: 10px;
-    text-align: center;
-  }
-  .service_s-card h2{
-    font-size: 28px;
+    letter-spacing: .06em;
+    text-transform: uppercase;
+    font-size: 20px;
+    margin-top: 0;
+    margin-bottom: 30px;
     font-weight: 700;
-    color: #2c2929;
-    margin-bottom: 20px;
-  }
-  .service_s-card span{
-    font-size: 25px;
-    font-weight: 700;
-    color: #c25421;
-  }
-  .service_s-cover {
-    height: 200px;
-    background-size: cover;
-    background-position: center;
-    border-radius: 10px 10px 0px 0px;
-    margin-bottom: 10px;
-    border: 1px solid #ccc;
-  }
-  .service_s-card p{
-    font-size: 15px;
-    line-height: 25px;
-    font-weight: 500;
-    color: #363333;
-  }
-  
-  .get-started-btn {
-    padding: 10px 20px;
-    background-color: #c8704b;
-    color: #fff;
-    font-weight: 600;
-    margin-bottom: 20px;
-    margin-top: 20px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-  }
-  
-  .get-started-btn:hover {
-    background-color: #0057b300;
-    border-width:  1px;
-    border-style: solid;
-    border-color: black;
-    color: #c25421;
-  }
-  .propos h1{
-    font-weight: bold;
-    font-size: 45px;
-    text-align: center;
-    text-wrap: wrap;
-    color: rgb(30, 28, 28);
-    margin-top: 60px;
-    margin-bottom: 20px;
-  }
-/* ABOUT END HERE */
-
-@media only screen and (max-width: 900px) {
-   
-
-    .item-content-wraper {
-        /* width: 100%;
-        height: 100%;
-        padding-bottom: 20px;
-        padding-right: 5rem;
-        background-color: rgba(0, 0, 0, 0.2); */
-        display: none;
-    }
-
-    .carousel-nav-center .owl-nav button i {
-        display: none;
-    }
-
-    .logo{
-        width: 35%;
-        margin-left: 10px;
-    }
-
-    .hero-slide-item-content {
-        position: relative;
-    }
-
-    .hero-slide-item img {
-        height: 100%;
-    }
-
-    .item-content-title {
-        font-size: 3rem;
-    }
-
-    .hamburger-menu {
-        display: grid;
-    }
-
-    .nav-menu {
-        /* display: none; */
-        position: absolute;
-        top: 100%;
-        left: -100%;
-        background-color: #ffffff;
-        flex-direction: column;
-        width: 65%;
-        height: 100vh;
-        padding: 20px;
-        transition: 0.5s ease-in-out;
-    }
-
-    .nav-menu a {
-        margin: 10px 30px;
-    }
-
-    .nav-menu.active {
-        left: 0;
-    }
-
-
-
-    /*  */
-
-    .nav-menu{
-        display: block;
-    }
-    ul li a{
-        font-weight: 600;
-    }
-    .nav-menu ul li a{
-        font-size: 19px;
-        color: rgb(245, 122, 41);
-        display: block;
-        text-decoration: none;
-        padding: 0;
-        margin-right: 280px;
-      }
-
-      .dropdown {
-        float: left;
-        overflow: hidden;
-      }
-      
-      .dropdown .dropbtn {
-        color: rgb(0, 0, 0);
-        margin-left: 10px;
-        font-weight: 600;
-        font-size: 19px;
-      }
-      
-      .nav-menu a:hover, .dropdown:hover .dropbtn {
-        background-color: none;
-      }
-      
-      .dropdown-content {
-        display: none;
-        position: absolute;
-        background-color: #f9f9f9;
-        min-width: 160px;
-        box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-        z-index: 1;
-      }
-      
-      .dropdown-content a {
-        float: none;
-        color: black;
-        padding: 12px 16px;
-        text-decoration: none;
-        display: block;
-        text-align: left;
-      }
-      
-      .dropdown-content a:hover {
-        background-color: #ddd;
-      }
-      
-      .dropdown:hover .dropdown-content {
-        display: block;
-      }
-
-
-      .login-btn{
-        padding: 10px 25px 10px 25px;
-        font-weight: 500;
-        color: white;display: block;margin-left: 50px;
-        border-radius: 20px;
-      }
-
-    
-    /* .nav-menu li{
-        list-style-type:none ;
-        display:none;
-        align-items: center;
-        padding: 0 20px;
-        color:white;
-        margin-top: 30px;
-    }
-    
-    .nav-menu li ~ li{
-        margin-left: 30px;
-    }
-    .nav-menu a{
-        font-weight: 500;
-        font-size: 25px;
-    } */
-
-
-    /* <!-- HEADER CSS START HERE --> */
-    /* SOLUTION START HERE */
-.solution button{
-    padding: 10px 35px;
-    font-weight: 600;
-    border: none;
-    color: #221f1f;
+    line-height: 136%;
 }
-
-
-/* FOOTER START HERE */
-.container_footer{
-    display: block;
-    flex-wrap: wrap;
-    
-  }
-  .footer_form{
+.header p{
+  max-width: 600px;
     text-align: center;
-  }
-  .footer_form h3{
-    font-size: 24px;
-    color: white;
-    text-decoration: underline;
-    font-weight: 700;
-    margin-bottom: 20px;
-  }
-  .footer_form input{
-    width: 350px;
-    height: 50px;
-    margin-bottom: 12px;
-    padding-left: 15px;
-    font-size: 16px;
-    border: none;
-    border-radius: 2px;
-  }
-  .footer_form button{
-    background-color: #c25421;
-    color: white;
-    border: none;
-    cursor: pointer;
-    font-weight: bold;
-    transition: all .3s ease;
-    width: 350px;
-    height: 50px;
-    font-size: 17px;
-    border-radius: 2px;
-  }
-  .footer_form button:hover{
-    opacity: 0.80;
-  }
-  .footer_containt{
-    margin-left: 30px;
-  }
-  .footer_containt h2{
-    margin-top: 30px;
-    font-size: 28px;
-    color: rgb(244, 244, 244);
-    font-weight: 700;
-  }
-  .footer_containt ul li{
-    padding-top: 20px;
-  }
-  .footer_containt ul li a{
-    text-decoration: none;
-    color: black;
-    font-size: 17px;
-    transition: all 0.6s;
-  }
-  .footer_containt ul li a:hover{
-    color: rgb(255, 255, 255);
-    text-decoration: underline;
-  }
-  .footer{
-    background-image: linear-gradient(to bottom right, rgb(191, 86, 12) , rgb(225, 181, 131),rgb(191, 86, 12));
-    padding: 30px 0px 30px 0px;
-    margin-top: 100px;
-  }
-  .footer_form h4{
-    margin-top: 15px;
-    font-weight: 600;
-  }
-  .footer_form i{
+    letter-spacing: -.02em;
+    margin-left: auto;
+    margin-right: auto;
     font-size: 18px;
-  }
-  .owner{
-    text-align: center;
-    color: rgb(34, 32, 32);
-    padding-top: 50px;
-    font-weight: 400;
-  }
-/* FOOTER END HERE */
-
-
-/* ABOUT  STARTS HERE */
-.services_s {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-  }
-  
-  .service_s-card {
-    width: 350px;
-    margin: 20px;
-    padding: 5px;
-    border: 1px solid #ccc;
-    border-radius: 10px;
-    text-align: center;
-  }
-  .service_s-card h2{
-    font-size: 28px;
-    font-weight: 700;
-    color: #2c2929;
-    margin-bottom: 20px;
-  }
-  .service_s-card span{
-    font-size: 25px;
-    font-weight: 700;
-    color: #c25421;
-  }
-  .service_s-card p{
-    font-size: 15px;
-    line-height: 25px;
-    font-weight: 400;
-    color: #2c2929;
-  }
-  .service_s-cover {
-    height: 200px;
-    background-size: cover;
-    background-position: center;
-    border-radius: 10px 10px 0px 0px;
-    margin-bottom: 10px;
-    border: 1px solid #ccc;
-  }
-  
-  .get-started-btn {
-    padding: 10px 20px;
-    background-color: #c8704b;
-    color: #fff;
-    font-weight: 600;
-    margin-bottom: 20px;
-    margin-top: 20px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-  }
-  
-  
-  .propos h1{
-    font-weight: bold;
-    font-size: 19px;
-    text-align: center;
-    text-wrap: wrap;
-    color: rgb(30, 28, 28);
-    margin-top: 73px;
-    
-  }
-/* ABOUT END HERE */
+    line-height: 156%;font-weight: 400;
 }
+.dev-bg-img{
+  z-index: -1;
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    position: absolute;
+    top: 34%;
+    bottom: 0%;
+    left: 0%;
+    right: 0%
+}img{
+  max-width: 100%;
+    vertical-align: middle;
+    display: inline-block;
+    verflow-clip-margin: content-box;
+    overflow: clip;
+}
+.dev h2{
+  letter-spacing: -.01em;
+    margin-top: 0;font-weight: 700;
+    margin-bottom: 20px;
+    font-size: 32px;
+}.dev P{
+  text-align: center;color: rgb(42, 42, 42);
+    letter-spacing: -.02em;
+    margin-bottom: 20px;
+    font-size: 18px;font-weight: 500;
+    line-height: 156%;
+}
+
+.dev-container {
+  display: flex;margin-top: 50px;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding: 20px;
+}
+
+.dev {
+  width: 100%;
+    height: 100%;
+    max-width: 570px;
+    background-color: #fffefe;
+    border-radius: 12px;
+    padding: 60px 40px;
+    box-shadow: 14px 14px 100px rgba(0, 0, 0, .09);
+    text-align: center;margin: 20px;
+}
+
+
+/* BUILD START HERE */
+.Build-space{margin-top: 200px;margin-bottom: 30px;}
+.Build_display{display: flex;justify-content:space-evenly;align-items: center;
+}
+.Build-bg{
+  background: linear-gradient(to left top,#ffb070, #f1541b, #f97000);
+  min-height: 80vh;padding-top: 90px;
+}
+.Build-content h1{
+  font-weight: 700;font-size: 45px;color: rgb(255, 255, 255);line-height: 50px;margin-bottom: 25px;
+}.Build-content p{font-size: 18px;font-weight: 500;color: rgb(241, 237, 237);padding-bottom: 30px;}
+
+@media screen and (max-width: 900px) {
+  .Build_display{display: block;justify-content:space-evenly;align-items: center;}
+  .Build_display img{margin:auto;padding-left: px;}
+}
+
+@media screen and (max-width: 600px) {
+  .header h1{
+      font-size: 30px; 
+  }
+  
+  .header h6{
+      font-size: 19px;
+      margin-bottom: 28px;
+  }
+  .header p{
+    max-width: 350px;
+    font-size: 15px;
+  }
+  .header {
+    margin-top: 70px;
+  }
+  /*  */
+
+  .dev-bg-img{
+      top: 43%;
+  }.dev img{width: 45%;}
+  .dev h2{
+      font-size: 28px;padding-top: 18px;
+  }
+  
+  .dev-container {
+   margin-top: 40px; 
+  }
+  .dev {
+    width: 100%;
+      height: 100%;
+      max-width: 570px;
+      background-color: #fffefe;
+      border-radius: 12px;
+      padding: 80px 20px;
+      box-shadow: 14px 14px 100px rgba(0, 0, 0, .09);
+      text-align: center;margin: 20px;
+  }
+
+  /* buid start here */
+  .Build-content h1{
+    font-weight: 700;font-size: 26px;line-height: 30px;margin-bottom: 20px;padding-left: 20px;
+  }.Build-content p{font-size: 14px;font-weight: 400;color: rgb(241, 237, 237);padding-bottom: 0px;padding-left: 20px}
+  #book{margin-left: 20px;margin-bottom: 30px;}
+
+  .footer_form input ,button{display: none;}
+}
+
