--- a/CSS/about.css
+++ b/CSS/about.css
@@ -150,6 +150,6 @@
   }.Build-content p{font-size: 14px;font-weight: 400;color: rgb(241, 237, 237);padding-bottom: 0px;padding-left: 20px}
   #book{margin-left: 20px;margin-bottom: 30px;}
 
-  .footer_form input ,button{display: none;}
+  .footer_form{display: none;}
 }
 
