--- a/CSS/about.css
+++ b/CSS/about.css
@@ -150,6 +150,7 @@
   }.Build-content p{font-size: 14px;font-weight: 400;color: rgb(241, 237, 237);padding-bottom: 0px;padding-left: 20px}
   #book{margin-left: 20px;margin-bottom: 30px;}
 
-  #input,#btn{display: none;}
+  #input{display: none;}
+  #btn{display: none;}
 }
 
