--- a/CSS/about.css
+++ b/CSS/about.css
@@ -135,7 +135,7 @@
   }
   .dev {
     width: 100%;
-      height: 60vh;
+      height: 100%;
       max-width: 570px;
       background-color: #fffefe;
       border-radius: 12px;
