--- a/CSS/Blog.css
+++ b/CSS/Blog.css
@@ -1,109 +1,439 @@
-.blog-container {
-    max-width: 800px;
-    margin: 0 auto;
-  }
-  
-  .header {
-    text-align: center;
-    margin-top: 40px;
-  }
-  
-  .header img {
-    max-width: 100%;
-  }
-  .content p{
-    font-size: 18px;
-    font-weight: 400;
-    color: #2e2d2d;
-  }
-  .content {
-    padding: 20px;
-  }
-  
-  h1 {
-    margin-top: 20px;
-    font-weight: 400;
-  }
-  
-  .recent-posts {
-    margin-top: 20px;
-  }
-  
-  .recent-posts h2 {
-    padding-bottom: 10px;
-  }
-  
-  ul {
-    list-style-type: none;
-    padding: 0;
-  }
-  
-  li {
-    margin-bottom: 5px;
-  }
-  /* BLOG START HERE */
-  .faq-container {
-    max-width: 830px;
-    margin: 0 auto;
-  }
-  .faq-container h1{
-    padding-left: 40px;
-    font-weight: 400;
-    padding-bottom: 20px;
-  }
-  
-  .faq-item {
-    margin-bottom: 20px;
-  }
-  
-  .question {
-    cursor: pointer;
-    font-weight: bold;
-    padding: 20px;
-    background-color: #d5d4d4;
-    margin-top: 20px;
-    
-  }
-  
-  .answer {
-    max-height: 0;
-    overflow: hidden;
-    font-size: 18px;
-    font-weight: 400;
-    transition: max-height 0.3s ease-out;
-    color: #3c3c3c;
-  }
-  @media only screen and (max-width: 800px) {
-    .faq-container {
-        max-width: 340px;
-        margin: 0 auto;
-      }
-      .faq-container h1{
-        padding-left: 17px;
-        font-weight: 400;
-        font-size: 28px;
-        padding-bottom: 20px;
-      }
+html.w-mod-touch * {
+  background-attachment: scroll !important;
+}
+.about-feature-wrapper {
+  width: 90%;
+  max-width: 1280px;
+  justify-content: space-between;
+  align-items: center;
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 100px;
+  padding-bottom: 100px;
+  display: flex;
+}
 
-      .question {
-        cursor: pointer;
-        font-weight: bold;
-        padding: 20px;
-        background-color: #d5d4d4;
-        margin-top: 20px;
-        
-      }
-      
-      .answer {
-        max-height: 0;
-        overflow: hidden;
-        padding-top: 10px;
-        font-size: 13px;
-        font-weight: 400;
-        transition: max-height 0.3s ease-out;
-        color: #3c3c3c;
-      }
-      .content p{
-        font-size: 16px;
-      }
+.about-feature-text-wrapper {
+  width: 50%;
+  max-width: 575px;
+}
+.h2-heading-40px-orange {
+  color: #e73d23;
+  letter-spacing: -.01em;
+    margin-top: 0;
+    margin-bottom: 30px;
+    font-size: 40px;
+    font-weight: 800;
+    line-height: 125%;
+}
+
+.about-feature-pointer-container {
+  width: 100%;
+  max-width: 500px;
+  grid-column-gap: 20px;
+  grid-row-gap: 20px;
+  flex-direction: column;
+  display: flex;
+}
+
+.about-feature-pointer {
+  grid-column-gap: 16px;
+  grid-row-gap: 16px;
+  align-items: flex-start;
+  display: flex;
+}
+.about-feature-pointer-icon {
+  width: 32px;
+  height: 31px;
+  max-width: 100%;
+    vertical-align: middle;
+    display: inline-block;
+}
+
+.about-feature-pointer-text {
+  font-size: 18px;
+  line-height: 144%;
+}
+
+.about-feature-pointer-text {
+  font-size: 18px;font-weight: 400;color: rgb(27, 27, 27);
+  line-height: 144%;
+}
+
+.about-feature-image-wrapper {
+  width: 50%;
+  max-width: 620px;
+  margin-right: -3%;
+  position: relative;
+}
+
+element.style {transform: translate3d(0px, -7.3274px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg);
+  transform-style: preserve-3d;
+  will-change: transform;}
+
+
+.about-feature-mockup-image{
+  width: 100%;
+  height: auto;
+  max-width: 117px;
+  position: absolute;
+  top: -9%;bottom: auto;left: auto;right: 81px;
+}
+
+.about-feature-hero-image {
+  width: 100%;height: 100%;
+  max-width: 100%;vertical-align: middle;display: inline-block;overflow-clip-margin: content-box;overflow: clip;
+}
+/* WHY */
+.about-why-choose-section {
+  background-image: radial-gradient(circle at 0 0, #e73d23, #e73d23 30%, #ef8408 63%, #fff);
+}
+.wrapper-1240px.about-why-choose-flex {
+  grid-column-gap: 60px;
+  grid-row-gap: 60px;
+  padding-top: 140px;
+  padding-bottom: 140px;
+}
+
+.wrapper-1240px {
+  width: 90%;
+  max-width: 1240px;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: px;
+  padding-bottom: px;
+  display: flex;
+}
+
+.why-choose-text-wrapper {
+  width: 100%;
+  max-width: 600px;
+  text-align: center;
+}
+
+.h2-heading-40px-white {
+  color: #fff;
+  margin-bottom: 0;
+  letter-spacing: -.01em;
+    margin-top: 0;
+    margin-bottom: px;
+    font-size: 40px;
+    font-weight: 800;
+    line-height: 125%;
+}
+
+.why-choose-grid {
+  width: 100%;
+  height: 100%;
+  grid-column-gap: 30px;
+  grid-row-gap: 30px;
+  grid-template-rows: auto;
+  grid-template-columns: 1fr 1fr 1fr;
+}.w-layout-grid {
+  grid-auto-columns: 1fr;
+  display: grid;
+}
+
+.why-choose-item-wrapper {
+  width: 100%;
+  max-width: 373px;
+  text-align: center;
+  background-color: #fff;
+  border-radius: 16px;
+  flex-direction: column;
+  align-items: center;
+  padding: 90px 44px;
+  display: flex;
+}.why-choose-item-wrapper img {width: 43%;}
+.why-choose-item-heading{font-size: 25px;font-weight: 500;}
+.why-choose-item-subtext{font-size: 18px;font-weight: 400;}
+
+/*  */
+
+/* WE OFFER START HERE */
+.wrapper-1241px.about-best-security-flex {
+  grid-column-gap: 80px;
+  grid-row-gap: 80px;
+  padding-top: 180px;
+  position: static;
+}
+
+.wrapper-1241px {
+  width: 90%;
+  max-width: 1240px;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 0px;
+  padding-bottom: 100px;
+  display: flex;
+}
+
+.best-security-text-wrapper {
+  width: 100%;
+  max-width: 740px;
+  text-align: center;
+}
+
+.h2-heading-40px-orange {
+  color: #e73d23;
+  letter-spacing: -.01em;
+    margin-top: 0;
+    margin-bottom: 30px;
+    font-size: 40px;
+    font-weight: 800;
+    line-height: 125%;
+}
+
+.best-security-item-grid {
+  width: 100%;
+  grid-column-gap: 40px;
+  grid-row-gap: 40px;
+  grid-template-rows: auto auto auto auto;
+}.w-layout-grid1 {
+  grid-template-columns: 1fr 1fr;
+  grid-auto-columns: 1fr;
+  display: grid;
+}
+
+.best-security-item {
+  width: 100%;
+  max-width: 600px;
+  grid-column-gap: 25px;
+  grid-row-gap: 25px;
+  background-color: #f6f7fb;
+  border-radius: 8px;
+  justify-content: space-between;
+  align-items: center;
+  padding: 30px 31px 30px 24px;
+  display: flex;
+}
+
+.best-security-item-image-wrap {
+  width: 90px;
+  height: 90px;
+  background-color: #fff;
+  border-radius: 10px;
+  flex: none;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+}
+
+.best-security-item-icon {
+  width: 50px;
+  height: 50px;
+  max-width: 100%;
+  vertical-align: middle;
+  display: inline-block;
+}
+
+.best-security-item-text-wrapper {
+  width: 80%;
+  max-width: 430px;
+}
+
+.best-security-item-text-heading {
+  letter-spacing: -.01em;
+  text-transform: capitalize;
+  margin-bottom: 5px;
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 125%;
+}
+.best-security-item-text-para {
+  font-size: 16px;
+  line-height: 160%;
+}
+
+@media screen and (max-width: 900px) {
+  .about-feature-wrapper {
+    display:block;margin: auto;padding-top: 50px;
   }
+  .about-feature-image-wrapper {
+    width: 100%;
+    max-width: 620px;
+    margin-right: -3%;
+    display: block;
+  }
+  .about-feature-mockup-image{
+    width: 100%;
+    height: auto;
+    max-width: 80px;
+    position: absolute;
+    top: 0%;bottom: auto;left: auto;right: 51px;
+  }
+  
+
+  .about-feature-text-wrapper {
+    width: 100%;
+    max-width: 575px;
+  }
+  .h2-heading-40px-orange {
+      font-size: 30px;
+      font-weight: 800;
+  }
+  
+  .about-feature-pointer-container {
+    width: 100%;
+    max-width: 500px;
+    grid-column-gap: 20px;
+    grid-row-gap: 20px;
+    flex-direction: column;
+    display: flex;margin-bottom: 78px;
+  }
+  
+  .about-feature-pointer {
+    grid-column-gap: 16px;
+    grid-row-gap: 16px;
+    align-items: flex-start;
+    display: flex;
+  }
+  .about-feature-pointer-icon {
+    width: 32px;
+    height: 31px;
+    max-width: 100%;
+      vertical-align: middle;
+      display: inline-block;
+  }
+  
+  .about-feature-pointer-text {
+    font-size: 18px;font-weight: 400;color: rgb(27, 27, 27);
+    line-height: 144%;
+  }
+  
+  .about-feature-pointer-text {
+    font-size: 18px;
+    line-height: 144%;
+  }
+  
+  /* WHY */
+  .why-choose-grid {
+    width: 100%;
+    height: 100%;
+    grid-column-gap: 30px;
+    grid-row-gap: 30px;
+    grid-template-rows: auto;
+    grid-template-columns:none;
+  }
+  .about-why-choose-section{margin: auto;text-align: center;}
+
+ 
+  .why-choose-item-wrapper img {width: 43%;}
+  .why-choose-item-wrapper {
+    padding: 90px 44px;
+    padding: 90px 22px;
+  }
+  .h2-heading-40px-white{font-size: 30px;font-weight: 700;}
+  .why-choose-item-heading{font-size: 25px;font-weight: 700;padding-bottom: 10px;}
+.why-choose-item-subtext{font-size: 18px;font-weight: 500;}
+
+
+
+/*  */
+
+/* WE OFFER START HERE */
+.wrapper-1241px.about-best-security-flex {
+  grid-column-gap: 80px;
+  grid-row-gap: 80px;
+  padding-top: 180px;
+  position: static;
+}
+
+.wrapper-1241px {
+  width: 90%;
+  max-width: 1240px;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 0px;
+  padding-bottom: 100px;
+  display: flex;
+}
+
+.best-security-text-wrapper {
+  width: 100%;
+  max-width: 740px;
+  text-align: center;
+}
+
+.h2-heading-40px-orange {
+  color: #e73d23;
+  letter-spacing: -.01em;
+    margin-top: 0;
+    margin-bottom: 30px;
+    font-size: 28px;
+    font-weight: 800;
+    line-height: 125%;
+}
+
+.best-security-item-grid {
+  width: 100%;
+  grid-column-gap: 40px;
+  grid-row-gap: 40px;
+  grid-template-rows: auto auto auto auto;
+}.w-layout-grid1 {
+  grid-template-columns: 1fr 1fr;
+  grid-auto-columns: 1fr;
+  display: block;
+}
+
+.best-security-item {
+  width: 100%;margin-top: 30px;
+  max-width: 600px;
+  grid-column-gap: 25px;
+  grid-row-gap: 25px;
+  background-color: #f6f7fb;
+  box-shadow: 14px 14px 90px rgba(0, 0, 0, 0.20);
+  border-radius: 8px;
+  justify-content: space-between;
+  align-items: center;
+  padding: 30px 31px 30px 24px;
+  display: flex;
+}
+
+.best-security-item-image-wrap {
+  width: 30px;
+  height: 30px;
+  background-color: #fff;
+  border-radius: 10px;
+  flex: none;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+}
+
+.best-security-item-icon {
+  width: 30px;
+  height: 50px;
+  max-width: 100%;
+  vertical-align: middle;
+  display: inline-block;
+}
+
+.best-security-item-text-wrapper {
+  width: 80%;
+  max-width: 430px;
+}
+
+.best-security-item-text-heading {
+  letter-spacing: -.01em;
+  text-transform: capitalize;
+  margin-bottom: 5px;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 125%;
+}
+.best-security-item-text-para {
+  font-size: 16px;font-weight: 500;
+  line-height: 150%;
+}
+
+}
